[project]
name = "uv01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy==2.4.0",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# 启用预览功能（含类型感知 lint、新规则、更智能修复）
preview = true
# 行长（与 formatter 一致）
line-length = 5

[tool.ruff.format]
# 启用预览格式特性（如字符串规范化）
preview = true
# 使用单引号
quote-style = "single"
